# Trade-Lab

./: .gitignore  AGENTS.md  README.md  package-lock.json
.github/workflows/: backend-ci.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
backend/catboost_info/learn/: events.out.tfevents
backend/src/trade_lab/: __init__.py  config.py
backend/src/trade_lab/adapters/: __init__.py  databento.py  databento_historical.py  historical_parquet.py  replay_catalog.py  synthetic_replay.py
backend/src/trade_lab/api/: __init__.py  __main__.py  app.py  dto.py  serialization.py
backend/src/trade_lab/domain/: __init__.py  candles.py  data_quality.py  events.py  feed.py  levels.py  market_context.py  observations.py  outcomes.py  prices.py  sessions.py  trading_day.py
backend/src/trade_lab/domain/contracts/: __init__.py  strategy_contract.py
backend/src/trade_lab/ports/: __init__.py  market_data.py
backend/src/trade_lab/services/: __init__.py  bounded_queue.py  broadcaster.py  journal.py  live.py  model_registry.py  replay.py  runtime.py  seed.py  strategy_core_service.py
backend/src/trade_lab/services/inference/: __init__.py  inference_engine.py  outcome_tracker.py  resolution_adapter.py
backend/src/trade_lab/services/inference/features/: __init__.py  feature_functions.py
backend/tests/: conftest.py  test_activation_gate_w1.py  test_api_contract.py  test_benchmark_smoke.py  test_bounded_queue.py  test_config.py  test_dark_honest_resolver.py  test_engine_version_binding.py  test_feature_functions.py  test_historical_parquet.py  test_historical_parquet_adapter.py  test_honest_resolver_serving.py  test_inference_api.py  test_inference_engine.py  test_journal.py  test_levels_observations.py  test_lifecycle_w2.py  test_live_databento.py  test_live_databento_preflight_script.py  test_live_replay_exclusion.py  test_live_warm_start.py  test_market_context.py  test_market_context_retention_w1.py  test_models_and_ports.py  test_outcome_tracker.py  test_platform_version_binding.py  test_prices_sessions_candles.py  test_replay_catalog.py  test_resolution_adapter.py  test_runtime_replay_broadcaster.py  test_seed.py  test_serialization_contract.py  test_strategy_contract.py  test_strategy_core_acceptance.py  test_strategy_core_dependency.py  test_strategy_core_replay_integration.py  test_strategy_core_service.py  test_touch_direction_fix.py  test_trading_day.py
backend/tests/fixtures/: strategy.json
backend/validation/: d1_characterization_harness.py
docs/: SESSION-HANDOFF-2026-05-30.md  architecture.md  frontend-workstation-design.md  ifvg-strat.md  implementation-readiness.md  inference-integration-plan.md  live-databento-validation-runbook.md  market-data-contract.md  research-integration-contract.md  sessions-levels-touches.md  strategy-core-alignment-runbook.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  config.test.ts  config.ts  styles.css
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/chart/: overlayManager.test.ts  overlayManager.ts  viewModels.test.ts  viewModels.ts
frontend/src/components/: ChartWorkspace.test.tsx  ChartWorkspace.tsx  EventBlotter.test.tsx  EventBlotter.tsx  IntelligencePanel.test.tsx  IntelligencePanel.tsx  LiveDataPanel.test.tsx  LiveDataPanel.tsx  ModelPanel.test.tsx  ModelPanel.tsx  ReplayControls.tsx  (+5 more)
plans/: algo_chef_smc_htf_fvg_ifvg_strategy_v2.pine  implementation-plan.md  strategy-decision-core-current-implementation-survey.md
scripts/: live_databento_preflight.py
(+9 files in other folders)
