[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "trade-lab"
version = "0.1.0"
description = "Deterministic backend foundation for the Trade-Lab NQ workstation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "catboost>=1.2",
  "fastapi>=0.115",
  "httpx2>=2.3",
  "orjson>=3.10",
  "pyarrow>=18.0",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "strategy-core @ git+https://github.com/thealgochef/Strategy-Core.git@2fe99e57978a9bad993a4638348ca3386aa03731",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/trade_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "benchmark: lightweight synthetic throughput smoke tests",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]
