[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "trade-lab"
version = "0.1.0"
description = "Deterministic backend foundation for the Trade-Lab NQ workstation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "catboost>=1.2",
  "fastapi>=0.115",
  "httpx2>=2.3",
  "orjson>=3.10",
  "pyarrow>=18.0",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "strategy-core @ git+https://github.com/thealgochef/Strategy-Core.git@c615e40ec13ef5a34d69910a78d144c677b138a8",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/trade_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "benchmark: lightweight synthetic throughput smoke tests",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]
