[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "trade-lab"
version = "0.1.0"
description = "Deterministic backend foundation for the Trade-Lab NQ workstation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "catboost>=1.2",
  "fastapi>=0.115",
  "orjson>=3.10",
  "pyarrow>=18.0",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "strategy-core @ git+https://github.com/thealgochef/Strategy-Core.git@dc14652232510e61e1a0b6686a1824977b39babc",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  # starlette 1.x's TestClient backend (cold CI resolves starlette>=1.x, whose
  # testclient imports `httpx2 as httpx`); sole consumers are the TestClient tests,
  # so it is a test dependency, not a runtime one. CI installs .[dev].
  "httpx2>=2.3",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/trade_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "benchmark: lightweight synthetic throughput smoke tests",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF022"]
